attached_assets/Pasted--bolt-expo-starter-1-0-0-build-web-cross-env-NODE-ENV-production-EXPO-NO-SSR-1-EXPO-USE-STATIC-1-1760437007548_1760437007549.txt

> bolt-expo-starter@1.0.0 build:web
> cross-env NODE_ENV=production EXPO_NO_SSR=1 EXPO_USE_STATIC=1 npx expo export --platform web --output-dir dist --no-bytecode --clear && node scripts/cleanup-build.js

env: load .env.local .env.production
env: export EXPO_PUBLIC_API_URL service_role_secret_key EXPO_PUBLIC_API_BASE_URL
Starting Metro Bundler
warning: Bundler cache is empty, rebuilding (this may take a minute)
Static rendering is enabled. Learn more: https://docs.expo.dev/router/reference/static-rendering/
| Dynamic import at line 124: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 135: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 43: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 52: require(s). This module may not work as intended when deployed to a runtime.
| Dynamic import at line 63: require(s). This module may not work as intended when deployed to a runtime.
λ Bundled 211352ms node_modules/expo-router/node/render.js (2715 modules)
Web node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓ 100.0% (2686/2686)SyntaxError: Invalid or unexpected token
/home/runner/workspace/node_modules/expo-router/node/render.js.bundle?platform=web&dev=false&hot=false&minify=true&transform.engine=hermes&transform.routerRoot=app&resolver.environment=node&transform.environment=node&resolver.exporting=true&unstable_transformProfile=hermes-stable:2652
__d(function(g,r,i,a,m,e,d){"use strict";Object.defineProperty(e,"__esModule",{"value":!0}),e.WorkletEventHandler=void 0;const t=(0,r(d[0]).shouldBeUseWeb)();e.WorkletEventHandler=t?class{"constructor"(t,s=[]){this.worklet=t,this.eventNames=s,this.listeners={},this.setupWebListeners()}"setupWebListeners"(){this.listeners={},this.eventNames.forEach(t=>{this.listeners[t]=(function(t,s){return n=>{s({...n.nativeEvent,"eventName":t})}})(t,this.worklet)})}"updateEventHandler"(t,s){this.worklet=t,this.eventNames=s,this.setupWebListeners()}"registerForEvents"(t,s){}"unregisterFromEvents"(t){}}:class{#"e";#"t";"constructor"(t,s){this.worklet=t,this.eventNames=s,this.#e=new Set,this.#t=new Map}"updateEventHandler"(t,s){this.worklet=t,this.eventNames=s,this.#t.forEach(t=>{t.forEach(t=>(0,r(d[1]).unregisterEventHandler)(t))}),Array.from(this.#e).forEach(t=>{const s=this.eventNames.map(s=>(0,r(d[1]).registerEventHandler)(this.worklet,s,t));this.#t.set(t,s)})}"registerForEvents"(t,s){this.#e.add(t);const n=this.eventNames.map(s=>(0,r(d[1]).registerEventHandler)(this.worklet,s,t));if(this.#t.set(t,n),0===this.eventNames.length&&s){const n=(0,r(d[1]).registerEventHandler)(this.worklet,s,t);this.#t.set(t,[n])}}"unregisterFromEvents"(t){this.#e.delete(t),this.#t.get(t)?.forEach(t=>{(0,r(d[1]).unregisterEventHandler)(t)}),this.#t.delete(t)}}},2625,[2520,2538]);
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1472:18)
    at Module._compile (node:internal/modules/cjs/loader:1501:20)
    at requireFromString (/home/runner/workspace/node_modules/require-from-string/index.js:28:4)
    at evalMetroNoHandling (/home/runner/workspace/node_modules/@expo/cli/src/start/server/getStaticRenderFunctions.ts:131:53)
    at evalMetroAndWrapFunctions (/home/runner/workspace/node_modules/@expo/cli/src/start/server/getStaticRenderFunctions.ts:94:20)
    at MetroBundlerDevServer.ssrLoadModule (/home/runner/workspace/node_modules/@expo/cli/src/start/server/metro/MetroBundlerDevServer.ts:432:37)
    at MetroBundlerDevServer.getStaticRenderFunctionAsync (/home/runner/workspace/node_modules/@expo/cli/src/start/server/metro/MetroBundlerDevServer.ts:278:7)
    at async Promise.all (index 1)
    at exportFromServerAsync (/home/runner/workspace/node_modules/@expo/cli/src/export/exportStaticAsync.ts:164:66)
    at exportAppAsync (/home/runner/workspace/node_modules/@expo/cli/src/export/exportApp.ts:352:9)